Read LOINC codes from csv and make examples

--- a/makeObservation.ipynb
+++ b/makeObservation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0438f38b",
+   "id": "26ab5933",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "34ead339",
+   "id": "07e5582c",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8d77e8da",
+   "id": "3cc8dcc7",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "54c23bdb",
+   "id": "4bb5c2c6",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b0f2c951",
+   "id": "20dc32fe",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1e609df0",
+   "id": "c3e3bc11",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0b28721a",
+   "id": "1eb7b052",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d5bb9baf",
+   "id": "83db5a92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d6751813",
+   "id": "3e8fc083",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "450a7a83",
+   "id": "a019b7d7",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bda3c30f",
+   "id": "22a109fd",
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b69165a1",
+   "id": "8d0ccd19",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6436e143",
+   "id": "34e37419",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "743019fc",
+   "id": "a3eeb03c",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d299ee56",
+   "id": "336a8e3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ca9d8902",
+   "id": "57be075c",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "cccdbf56",
+   "id": "209e26c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0bf1362f",
+   "id": "98f69312",
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a3a3d21e",
+   "id": "c08098d5",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b5cd2e1e",
+   "id": "7902e556",
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a9684adc",
+   "id": "4318302a",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1bcdf336",
+   "id": "e6dd8832",
    "metadata": {},
    "outputs": [
     {
@@ -959,8 +959,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "f240c292",
+   "execution_count": 23,
+   "id": "8b745e46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,15 +972,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "8facb978",
+   "execution_count": 24,
+   "id": "9b7ab918",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2011-11-04T00:05:23+04:00\n"
+      "2011-11-04T00:05:23+00:00\n"
      ]
     }
    ],
@@ -990,8 +990,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f67705d0",
+   "execution_count": 25,
+   "id": "a551d9fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,20 +1000,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "82a7a3e7",
+   "execution_count": 26,
+   "id": "b6760621",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"category\": [\n",
+      "        {\n",
+      "            \"coding\": [\n",
+      "                {\n",
+      "                    \"code\": \"laboratory\",\n",
+      "                    \"display\": \"Laboratory\",\n",
+      "                    \"system\": \"http://loinc.org\"\n",
+      "                }\n",
+      "            ]\n",
+      "        }\n",
+      "    ],\n",
+      "    \"code\": {\n",
+      "        \"coding\": [\n",
+      "            {\n",
+      "                \"code\": \"1751-7\",\n",
+      "                \"display\": \"Albumin [Mass/volume] in Serum or Plasma\",\n",
+      "                \"system\": \"http://loinc.org\"\n",
+      "            }\n",
+      "        ],\n",
+      "        \"text\": \"Albumin [Mass/volume] in Serum or Plasma\"\n",
+      "    },\n",
+      "    \"effectiveDateTime\": \"2011-11-04T00:05:23+00:00\",\n",
+      "    \"status\": \"final\",\n",
+      "    \"resourceType\": \"Observation\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "print(json.dumps(observation.as_json(), indent=4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8885b978",
+   "execution_count": 27,
+   "id": "3c3fb3f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on Quantity in module fhirclient.r3.models.quantity object:\n",
+      "\n",
+      "class Quantity(fhirclient.r3.models.element.Element)\n",
+      " |  Quantity(jsondict=None, strict=True)\n",
+      " |  \n",
+      " |  A measured or measurable amount.\n",
+      " |  \n",
+      " |  A measured amount (or an amount that can potentially be measured). Note\n",
+      " |  that measured amounts include amounts that are not precisely quantified,\n",
+      " |  including amounts involving arbitrary units and floating currencies.\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      Quantity\n",
+      " |      fhirclient.r3.models.element.Element\n",
+      " |      fhirclient.r3.models.fhirabstractbase.FHIRAbstractBase\n",
+      " |      builtins.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, jsondict=None, strict=True)\n",
+      " |      Initialize all valid properties.\n",
+      " |      \n",
+      " |      :raises: FHIRValidationError on validation errors, unless strict is False\n",
+      " |      :param dict jsondict: A JSON dictionary to use for initialization\n",
+      " |      :param bool strict: If True (the default), invalid variables will raise a TypeError\n",
+      " |  \n",
+      " |  elementProperties(self)\n",
+      " |      Returns a list of tuples, one tuple for each property that should\n",
+      " |      be serialized, as: (\"name\", \"json_name\", type, is_list, \"of_many\", not_optional)\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  resource_type = 'Quantity'\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from fhirclient.r3.models.fhirabstractbase.FHIRAbstractBase:\n",
+      " |  \n",
+      " |  as_json(self)\n",
+      " |      Serializes to JSON by inspecting `elementProperties()` and creating\n",
+      " |      a JSON dictionary of all registered properties. Checks:\n",
+      " |      \n",
+      " |      - whether required properties are not None (and lists not empty)\n",
+      " |      - whether not-None properties are of the correct type\n",
+      " |      \n",
+      " |      :raises: FHIRValidationError if properties have the wrong type or if\n",
+      " |          required properties are empty\n",
+      " |      :returns: A validated dict object that can be JSON serialized\n",
+      " |  \n",
+      " |  didResolveReference(self, refid, resolved)\n",
+      " |      Called by `FHIRResource` when it resolves a reference. Stores the\n",
+      " |      resolved reference into the `_resolved` dictionary.\n",
+      " |      \n",
+      " |      :param refid: The id of the resource that was resolved\n",
+      " |      :param refid: The resolved resource, ready to be cached\n",
+      " |  \n",
+      " |  owningBundle(self)\n",
+      " |      Walks the owner hierarchy and returns the next parent that is a\n",
+      " |      `Bundle` instance.\n",
+      " |  \n",
+      " |  owningResource(self)\n",
+      " |      Walks the owner hierarchy and returns the next parent that is a\n",
+      " |      `DomainResource` instance.\n",
+      " |  \n",
+      " |  resolvedReference(self, refid)\n",
+      " |      Returns the resolved reference with the given id, if it has been\n",
+      " |      resolved already. If it hasn't, forwards the call to its owner if it\n",
+      " |      has one.\n",
+      " |      \n",
+      " |      You should probably use `resolve()` on the `FHIRReference` itself.\n",
+      " |      \n",
+      " |      :param refid: The id of the resource to resolve\n",
+      " |      :returns: An instance of `Resource`, if it was found\n",
+      " |  \n",
+      " |  update_with_json(self, jsondict)\n",
+      " |      Update the receiver with data in a JSON dictionary.\n",
+      " |      \n",
+      " |      :raises: FHIRValidationError on validation errors\n",
+      " |      :param dict jsondict: The JSON dictionary to use to update the receiver\n",
+      " |      :returns: None on success, a list of errors if there were errors\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Class methods inherited from fhirclient.r3.models.fhirabstractbase.FHIRAbstractBase:\n",
+      " |  \n",
+      " |  with_json(jsonobj) from builtins.type\n",
+      " |      Initialize an element from a JSON dictionary or array.\n",
+      " |      \n",
+      " |      If the JSON dictionary has a \"resourceType\" entry and the specified\n",
+      " |      resource type is not the receiving classes type, uses\n",
+      " |      `FHIRElementFactory` to return a correct class instance.\n",
+      " |      \n",
+      " |      :raises: TypeError on anything but dict or list of dicts\n",
+      " |      :raises: FHIRValidationError if instantiation fails\n",
+      " |      :param jsonobj: A dict or list of dicts to instantiate from\n",
+      " |      :returns: An instance or a list of instances created from JSON data\n",
+      " |  \n",
+      " |  with_json_and_owner(jsonobj, owner) from builtins.type\n",
+      " |      Instantiates by forwarding to `with_json()`, then remembers the\n",
+      " |      \"owner\" of the instantiated elements. The \"owner\" is the resource\n",
+      " |      containing the receiver and is used to resolve contained resources.\n",
+      " |      \n",
+      " |      :raises: TypeError on anything but dict or list of dicts\n",
+      " |      :raises: FHIRValidationError if instantiation fails\n",
+      " |      :param dict jsonobj: Decoded JSON dictionary (or list thereof)\n",
+      " |      :param FHIRElement owner: The owning parent\n",
+      " |      :returns: An instance or a list of instances created from JSON data\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from fhirclient.r3.models.fhirabstractbase.FHIRAbstractBase:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import fhirclient.r3.models.quantity as q\n",
     "valuequantity = q.Quantity()\n",
@@ -1022,10 +1178,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "627da955",
+   "execution_count": 28,
+   "id": "aed85ce1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('extension', 'extension', <class 'fhirclient.r3.models.extension.Extension'>, True, None, False)\n",
+      "('id', 'id', <class 'str'>, False, None, False)\n",
+      "('code', 'code', <class 'str'>, False, None, False)\n",
+      "('comparator', 'comparator', <class 'str'>, False, None, False)\n",
+      "('system', 'system', <class 'str'>, False, None, False)\n",
+      "('unit', 'unit', <class 'str'>, False, None, False)\n",
+      "('value', 'value', <class 'float'>, False, None, False)\n"
+     ]
+    }
+   ],
    "source": [
     "for element in valuequantity.elementProperties():\n",
     "    print(element)"
@@ -1033,8 +1203,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3d6f338f",
+   "execution_count": 29,
+   "id": "e799f746",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,18 +1216,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "27f2ae97",
+   "execution_count": 30,
+   "id": "342d40fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"code\": \"g/dL\",\n",
+      "    \"system\": \"http://unitsofmeasure.org\",\n",
+      "    \"unit\": \"gram per deciliter\",\n",
+      "    \"value\": 5\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "print(json.dumps(valuequantity.as_json(), indent=4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8365c755",
+   "execution_count": 31,
+   "id": "45bf28d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,18 +1249,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "35a6f6be",
+   "execution_count": 32,
+   "id": "8ffd19a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"category\": [\n",
+      "        {\n",
+      "            \"coding\": [\n",
+      "                {\n",
+      "                    \"code\": \"laboratory\",\n",
+      "                    \"display\": \"Laboratory\",\n",
+      "                    \"system\": \"http://loinc.org\"\n",
+      "                }\n",
+      "            ]\n",
+      "        }\n",
+      "    ],\n",
+      "    \"code\": {\n",
+      "        \"coding\": [\n",
+      "            {\n",
+      "                \"code\": \"1751-7\",\n",
+      "                \"display\": \"Albumin [Mass/volume] in Serum or Plasma\",\n",
+      "                \"system\": \"http://loinc.org\"\n",
+      "            }\n",
+      "        ],\n",
+      "        \"text\": \"Albumin [Mass/volume] in Serum or Plasma\"\n",
+      "    },\n",
+      "    \"effectiveDateTime\": \"2011-11-04T00:05:23+00:00\",\n",
+      "    \"status\": \"final\",\n",
+      "    \"valueQuantity\": {\n",
+      "        \"code\": \"g/dL\",\n",
+      "        \"system\": \"http://unitsofmeasure.org\",\n",
+      "        \"unit\": \"gram per deciliter\",\n",
+      "        \"value\": 5\n",
+      "    },\n",
+      "    \"resourceType\": \"Observation\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "print(json.dumps(observation.as_json(), indent=4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "94b079b5",
+   "execution_count": 33,
+   "id": "2407bfb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,18 +1311,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "081402a0",
+   "execution_count": 34,
+   "id": "9ed7485d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"category\": [\n",
+      "        {\n",
+      "            \"coding\": [\n",
+      "                {\n",
+      "                    \"code\": \"laboratory\",\n",
+      "                    \"display\": \"Laboratory\",\n",
+      "                    \"system\": \"http://loinc.org\"\n",
+      "                }\n",
+      "            ]\n",
+      "        }\n",
+      "    ],\n",
+      "    \"code\": {\n",
+      "        \"coding\": [\n",
+      "            {\n",
+      "                \"code\": \"1751-7\",\n",
+      "                \"display\": \"Albumin [Mass/volume] in Serum or Plasma\",\n",
+      "                \"system\": \"http://loinc.org\"\n",
+      "            }\n",
+      "        ],\n",
+      "        \"text\": \"Albumin [Mass/volume] in Serum or Plasma\"\n",
+      "    },\n",
+      "    \"effectiveDateTime\": \"2011-11-04T00:05:23+00:00\",\n",
+      "    \"status\": \"final\",\n",
+      "    \"subject\": {\n",
+      "        \"reference\": \"Patient/3004\"\n",
+      "    },\n",
+      "    \"valueQuantity\": {\n",
+      "        \"code\": \"g/dL\",\n",
+      "        \"system\": \"http://unitsofmeasure.org\",\n",
+      "        \"unit\": \"gram per deciliter\",\n",
+      "        \"value\": 5\n",
+      "    },\n",
+      "    \"resourceType\": \"Observation\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "print(json.dumps(observation.as_json(), indent=4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "a1dbf1e4",
+   "execution_count": 35,
+   "id": "5ec912c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,17 +1373,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "5425821b",
+   "execution_count": 36,
+   "id": "c309aab5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0007291601330707831"
+       "0.2685914140172856"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,17 +1394,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "f8772b90",
+   "execution_count": 37,
+   "id": "657250a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "5"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aef874d3",
+   "id": "12d3ea61",
    "metadata": {},
    "outputs": [],
    "source": []
