--- a/lookup_code.ipynb
+++ b/lookup_code.ipynb
@@ -1076,7 +1076,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
