add GetToken notebook

--- a/GetToken.ipynb
+++ b/GetToken.ipynb
@@ -8,8 +8,8 @@
    "outputs": [],
    "source": [
     "import base64\n",
-    "clientid = \"0oa10eank3bU1QkH80h8\"\n",
-    "clientsecret = \"0jJH_3JbdtUvNPcwMrL0P98WfKd4--4lxDbtfJX5\"\n",
+    "clientid = \"\"\n",
+    "clientsecret = \"\"\n",
     "mycredentials = clientid + \":\" + clientsecret\n",
     "auth_string = \"Basic \" + base64.b64encode(mycredentials.encode('utf-8')).decode('utf-8')"
    ]
@@ -55,10 +55,10 @@
     "import json\n",
     "from requests.auth import HTTPBasicAuth\n",
     "\n",
-    "clientId = '0oa10eank3bU1QkH80h8'\n",
-    "clientSecret = '0jJH_3JbdtUvNPcwMrL0P98WfKd4--4lxDbtfJX5'\n",
-    "serviceAccountUsername = 'l1_rc12002_fhir'\n",
-    "serviceAccountPassword = 'YUxdrnwM$4YJVvEF' \n",
+    "clientId = ''\n",
+    "clientSecret = ''\n",
+    "serviceAccountUsername = ''\n",
+    "serviceAccountPassword = '' \n",
     "\n",
     "headers = {'Content-Type': 'application/x-www-form-urlencoded', \n",
     "           'Accept': 'application/json'}\n",
@@ -93,10 +93,10 @@
     "import requests\n",
     "from requests.auth import HTTPBasicAuth\n",
     "\n",
-    "clientId = '0oa10eank3bU1QkH80h8'\n",
-    "clientSecret = '0jJH_3JbdtUvNPcwMrL0P98WfKd4--4lxDbtfJX5'\n",
-    "serviceAccountUsername = 'l1_rc12002_fhir'\n",
-    "serviceAccountPassword = 'YUxdrnwM$4YJVvEF'\n",
+    "clientId = ''\n",
+    "clientSecret = ''\n",
+    "serviceAccountUsername = ''\n",
+    "serviceAccountPassword = ''\n",
     "\n",
     "headers = {'Content-Type': 'application/x-www-form-urlencoded', \n",
     "           'Accept': 'application/json'}\n",
